# graphTemplated

./: .clang-format  CMakeLists.txt  CMakePresets.json  graph.cpp  graph.hpp  graphs.txt  logs.txt
include/: GraphVisualisation.hpp  app.hpp  entity.hpp  graph.hpp  graph_generation.hpp  graphics.hpp  linear_algrebra.hpp  material.hpp  shader.hpp  shader_declaration.hpp  tasks_functions.hpp  triangle_mesh.hpp  utility.hpp
include/components/: component.hpp
libEngine/: CMakeLists.txt  graph.cpp  graph.hpp  graph_generation.hpp
src/: CMakeLists.txt  app.cpp  config.cpp  graph.cpp  graph_generation.cpp  main.cpp  material.cpp  shader.cpp  shader_declaration.cpp  triangle_mesh.cpp
src/shaders/: circle.frag  circle.vert  fragment.frag  line.frag  line.vert  vertex.vert
